--- a/src/styles/lesson.styl
+++ b/src/styles/lesson.styl
@@ -1,19 +1,18 @@
 .lesson
+  display flex
+  align-items stretch
   width 100%
-  padding 10px 0 10px 0
+  border-bottom 1px solid rgb(210, 210, 210)
 
   &-feature
-    display inline-block
+    padding 10px 0 10px 0
 
     &__date
       width 20%
 
     &__theme
+      // vertical-align middle
       width 50%
-      vertical-align center
 
     &__teacher
       width 30%
-
-.lesson:nth-child(2n+1)
-  background-color #ebebeb
