--- a/src/styles/table.styl
+++ b/src/styles/table.styl
@@ -1,7 +1,7 @@
 .table
-  width 80%
-  margin 0 auto
-  border 1px solid red
+  width 70%
+  margin-top 10px
+  margin-left 10px
 
   &-header
     color red
